--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <div class="max-w-4xl mx-auto space-y-6">
         <div class="flex items-center justify-between flex-wrap gap-4">
             <h1 class="text-3xl sm:text-4xl md:text-5xl font-bold text-black">
-                First Scoop
+                First Scoop AI
             </h1>
             <div class="flex gap-4 flex-wrap justify-center">
                 <select id="topic-dropdown" class="w-[180px] bg-white text-black border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500">
@@ -289,7 +289,7 @@
 
             switch (selectedTopic) {
                 case 'ai':
-                    apiUrl = `https://newsapi.org/v2/everything?q=artificial%20intelligence&sortBy=publishedAt&apiKey=${NEWS_API_KEY}&sources=${topicSources.ai}`;
+                    apiUrl = `https://newsapi.org/v2/everything?q=artificial%20intelligence%20OR%20AI&sortBy=publishedAt&apiKey=${NEWS_API_KEY}&sources=${topicSources.ai}`;
                     topicName = "Artificial Intelligence";
                     break;
                 case 'mac':
@@ -418,7 +418,7 @@
 
         // Initial fetch
         document.addEventListener('DOMContentLoaded', () => {
-            if (NEWS_API_KEY === 'YOUR_NEWS_API_KEY') {
+            if (NEWS_API_KEY === 'eba824c6afb54b1e8b6d441711f2dd0c') {
                 errorContainer.classList.remove('hidden');
                 errorMessageDisplay.textContent = 'Please replace "YOUR_NEWS_API_KEY" with your actual News API key!';
                 return;
